--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1124,6 +1124,11 @@ section .container {
   margin-left: 20px;
 }
 
+hr {
+  border: 0.01rem solid rgba(255, 255, 255, 0.212);
+  margin-bottom: 40px;
+}
+
 /*--------------------------------------------------------------
 # Credits
 --------------------------------------------------------------*/
